2001-06-12  Cyrille Chepelov  <chepelov@calixo.net>

	* objects/boolequation.h (<save|load>_boolequation): made the 
	prototypes for match the .c file.
	
	* samples/grafcet.dia: minor non-conformance with IEC-848
	fixed (in the transition from step 100 to step 101).

	* lib/properties.[ch]: added a flag (PROP_FLAG_DONT_MERGE) to
	disallow editing of properties if the object is part of a group.

	* objects/chronogram/chronoline.c: 
	* objects/SADT/annotation.c:
	* objects/SADT/box.c:
	* objects/GRAFCET/step.c:
	* objects/GRAFCET/transition.c:
	* objects/GRAFCET/condition.c: took advantage of PROP_FLAG_DONT_MERGE.
	
2001-06-12  Hans Breuer  <hans@breuer.org>

	* lib/libdia.def : removed lazyprop exports
	* lib/makefile.msc : removed lazyprop.obj

	* objects/custom/custom_objects.c : use HAVE_UNISTD_H
	and avoid crashes by always creating a custom->text,
	when (custom->info->has_text) 

	* objects/makefile.msc : removed sybase from build

	* objects/GRAFCET/boolequation.c (<save|load>_boolequation) :
	ObjectNode is a pointer already, which is what we want
	instead of a pointer pointer.

	* plug-ins/wmf/wmf.cpp : fixed problem with arc scaling
	and implemented working export for images

	* shapes/network/zip-disk.shape : added connection points 

2001-06-12  Cyrille Chepelov  <chepelov@calixo.net>

	* objects/SADT/box.c: removed lazyprops for standard props.
	* objects/chronograms/chronoline.c: removed lazyprops (phew !)
	* objects/chronograms/chronoref.c: ditto 

	* lib/Makefile.am:
	* lib/dummy_dep.h:
	* lib/connpoint_line.c:
	* lib/lazyprops.[ch] (DELETED): good riddance (closes #55895)
	* lib/properties.[ch]: new property types:
	    - PROP_TYPE_STATIC: static text to be displayed in the dialog.
	    - PROP_TYPE_MULTISTRING: same as string, but renders as a
	    multi-line entry box.
	    - PROP_TYPE_NOTEBOOK_BEGIN,_PAGE,_END: stuff to make dialogs
	    in a tabbed-notebook style (this is a bit complicated to use; 