@@ -70,10 +70,18 @@ typedef enum {
   PROP_TYPE_ENDPOINTS,
   PROP_TYPE_CONNPOINT_LINE,
   PROP_TYPE_TEXT, /* can't be visible */
+
+  /* pure widgets (eye candy): */
   PROP_TYPE_STATIC, /* tooltip is used as a (potentially big) static label */
   PROP_TYPE_NOTEBOOK_BEGIN,
   PROP_TYPE_NOTEBOOK_END,
   PROP_TYPE_NOTEBOOK_PAGE,
+  PROP_TYPE_MULTICOL_BEGIN,
+  PROP_TYPE_MULTICOL_END,
+  PROP_TYPE_MULTICOL_COLUMN,
+  PROP_TYPE_FRAME_BEGIN,
+  PROP_TYPE_FRAME_END,
+
   PROP_LAST
 } PropType;
 
@@ -405,6 +413,88 @@ extern PropEnumData prop_std_text_align_data[];
   { "text_colour", PROP_TYPE_COLOUR, PROP_FLAG_VISIBLE|PROP_FLAG_DONT_SAVE, \
     N_("Text colour"), NULL, NULL }
 
+/* Convenience macros */
+#define PROP_NOTEBOOK_BEGIN(name) \
+  { "nbook_" name, PROP_TYPE_NOTEBOOK_BEGIN, \
+              PROP_FLAG_VISIBLE|PROP_FLAG_DONT_SAVE, NULL, NULL}
+#define PROP_STD_NOTEBOOK_BEGIN PROP_NOTEBOOK_BEGIN("std")
+#define PROP_OFFSET_NOTEBOOK_BEGIN(name) \
+  { "nbook_" name, PROP_TYPE_NOTEBOOK_BEGIN, 0}
+#define PROP_OFFSET_STD_NOTEBOOK_BEGIN PROP_OFFSET_NOTEBOOK_BEGIN("std")
+
+#define PROP_NOTEBOOK_END(name) \
+  { "nbook_" name "_end", PROP_TYPE_NOTEBOOK_END, \
+      PROP_FLAG_VISIBLE|PROP_FLAG_DONT_SAVE, NULL, NULL}
+#define PROP_STD_NOTEBOOK_END PROP_NOTEBOOK_END("std")
+#define PROP_OFFSET_NOTEBOOK_END(name) \
+  { "nbook_" name "_end", PROP_TYPE_NOTEBOOK_END, 0}
+#define PROP_OFFSET_STD_NOTEBOOK_END PROP_OFFSET_NOTEBOOK_END("std")
+
+#define PROP_NOTEBOOK_PAGE(name,flags,descr) \
+  { "nbook_page_" name, PROP_TYPE_NOTEBOOK_PAGE, \
+ PROP_FLAG_VISIBLE|PROP_FLAG_DONT_SAVE|flags,descr,NULL}
+#define PROP_OFFSET_NOTEBOOK_PAGE(name) \
+  { "nbook_page_" name , PROP_TYPE_NOTEBOOK_PAGE, 0}
+
+#define PROP_MULTICOL_BEGIN(name) \
+  { "mcol_" name, PROP_TYPE_MULTICOL_BEGIN, \
+              PROP_FLAG_VISIBLE|PROP_FLAG_DONT_SAVE, NULL, NULL}
+#define PROP_STD_MULTICOL_BEGIN PROP_MULTICOL_BEGIN("std")
+#define PROP_OFFSET_MULTICOL_BEGIN(name) \
+  { "mcol_" name, PROP_TYPE_NOTEBOOK_BEGIN, 0}
+#define PROP_OFFSET_STD_MULTICOL_BEGIN PROP_OFFSET_MULTICOL_BEGIN("std")
+
+#define PROP_MULTICOL_END(name) \
+  { "mcol_" name "_end", PROP_TYPE_MULTICOL_END, \
+      PROP_FLAG_VISIBLE|PROP_FLAG_DONT_SAVE, NULL, NULL}
+#define PROP_STD_MULTICOL_END PROP_MULTICOL_END("std")
+#define PROP_OFFSET_MULTICOL_END(name) \
+  { "mcol_" name "_end", PROP_TYPE_NOTEBOOK_END, 0}
+#define PROP_OFFSET_STD_MULTICOL_END PROP_OFFSET_MULTICOL_END("std")
+
+#define PROP_MULTICOL_COLUMN(name) \
+  { "mcol_col_" name, PROP_TYPE_MULTICOL_COLUMN, \
+ PROP_FLAG_VISIBLE|PROP_FLAG_DONT_SAVE,NULL,NULL}
+#define PROP_OFFSET_MULTICOL_COLUMN(name) \
+  { "mcol_col_" name, PROP_TYPE_MULTICOL_COLUMN, 0}
+
+#define PROP_FRAME_BEGIN(name,flags,descr) \
+  { "frame_" name, PROP_TYPE_FRAME_BEGIN, \
+              PROP_FLAG_VISIBLE|PROP_FLAG_DONT_SAVE|flags, descr, NULL}
+#define PROP_OFFSET_FRAME_BEGIN(name) \
+  { "frame_" name, PROP_TYPE_FRAME_BEGIN, 0}
+
+#define PROP_FRAME_END(name,flags) \
+  { "frame_" name "_end", PROP_TYPE_FRAME_END, \
+      PROP_FLAG_VISIBLE|PROP_FLAG_DONT_SAVE|flags, NULL, NULL}
+#define PROP_OFFSET_FRAME_END(name) \
+  { "frame_" name "_end", PROP_TYPE_NOTEBOOK_END, 0}
+
+
+
 #endif
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
